[gd_scene load_steps=2 format=3 uid="uid://b7le8h1fias52"]

[ext_resource type="Script" path="res://scripts/login.gd" id="1_72syk"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_72syk")

[node name="emailTextEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = -118.0
offset_top = -102.0
offset_right = 147.0
offset_bottom = -45.0
placeholder_text = "Email"

[node name="passwordTextEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = -118.0
offset_top = -45.0
offset_right = 147.0
offset_bottom = 12.0
placeholder_text = "Password"
secret = true

[node name="LoginButton" type="Button" parent="."]
layout_mode = 0
offset_left = -40.0
offset_top = 46.0
offset_right = 55.0
offset_bottom = 98.0
text = "Login"

[node name="SignupRedirectButton" type="Button" parent="."]
layout_mode = 0
offset_left = 456.0
offset_top = -298.0
offset_right = 551.0
offset_bottom = -246.0
text = "Signup"

[connection signal="pressed" from="LoginButton" to="." method="_on_login_btn_pressed"]
[connection signal="pressed" from="SignupRedirectButton" to="." method="_on_signup_redirect_pressed"]
[connection signal="pressed" from="SignupRedirectButton" to="." method="_on_signup_redirect_button_pressed"]
